--- a/IS426 Repo/03.0 - File Operations.ipynb
+++ b/IS426 Repo/03.0 - File Operations.ipynb
@@ -97,16 +97,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "d1c26b6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Filename:  wi\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 4 file(s): \n",
+      "['conlontj_wifi2.sql', 'wifi_list3.csv', 'wifi_list2.csv', 'wifi_list.csv']\n"
+     ]
+    }
+   ],
    "source": [
-    "#Students:\n",
-    "#Create a script which allows the user to enter part of a filename.  \n",
-    "# The script should search through the data/ directory and print any\n",
-    "# files which match that name\n",
-    "\n"
+    "import glob\n",
+    "\n",
+    "#Ask for chunk of filename\n",
+    "fchunk = input(\"Filename: \")\n",
+    "found = [] # empty list for appending if files are found\n",
+    "\n",
+    "for file in glob.glob(\"./data/*.*\"):\n",
+    "    fname = file.split('/')[2] #remove path, leave only filename and ext\n",
+    "    try:\n",
+    "        if fname.find(fchunk) != -1:\n",
+    "            found.append(fname)\n",
+    "    except Exception as e:\n",
+    "        print(\"Error\")\n",
+    "if not found:\n",
+    "    print(f\"No files titled: {fchunk}\") # print that no files were found\n",
+    "else:\n",
+    "    print(f\"Found {len(found)} file(s): \") # print number of files found\n",
+    "    print(found) # print names of files found"
    ]
   },
   {
