Class work/Notes

--- a/Strings/Strings.ipynb
+++ b/Strings/Strings.ipynb
@@ -210,8 +210,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d125bcb8-96ca-4e1d-9317-e800226f07fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'max powers'\n",
+    "\n",
+    "name = string.split(' ')\n",
+    "\n",
+    "print(name[0])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "324e49f9-2e61-4721-a288-2691e6554464",
    "metadata": {},
    "outputs": [],
    "source": []
