--- a/IS426 Repo/06.0 - Mysql.ipynb
+++ b/IS426 Repo/06.0 - Mysql.ipynb
@@ -166,12 +166,14 @@
    "id": "competitive-doubt",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sql = '''SELECT COUNT(studentid)'''"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
