--- a/IS426-Repo/05.0 - Writing CSV files.ipynb
+++ b/IS426-Repo/05.0 - Writing CSV files.ipynb
@@ -157,7 +157,12 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "significant-tooth",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
